<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".presentation.fragments.StartMenuFragment">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_start"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/toolbar_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/settings"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_settings" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/hockey_analysis"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_start">

        <TextView
            android:id="@+id/games_btn"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/tv_back"
            android:gravity="center"
            android:text="@string/games"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/leagues_btn"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/tv_back"
            android:gravity="center"
            android:text="@string/leagues"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/news_btn"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/tv_back"
            android:gravity="center"
            android:text="@string/news"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/notes_btn"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/tv_back"
            android:gravity="center"
            android:text="@string/notes"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>